--- a/script/results_high_dim_rc.qmd
+++ b/script/results_high_dim_rc.qmd
@@ -17,7 +17,72 @@ source(file = here::here("script/FctCleanFeaturesName.R"))
 set.seed(1)
 ```
 
-# Forecast
+# Introduction
+
+# Methods
+
+## Use case
+
+## Reservoir computing
+
+## Genetic algorithm
+
+## Experimental setup
+
+### Metaparameter exploration
+
+Choice of hyperparameters :
+
+sigma leaking rate : because depending on setting, convergence to different leaking rate seem to occur. Furthermore, low leaking rate seemed to achieve better performance
+
+pmutCat : because hyperparameter monthly update seem not to improve performance which is counterintuitive as important features should evolve in this context of non stationary time series.
+
+Grid :
+
+- sigma leaking rate = c(0.016, 0.04, 0.1, 0.25)
+- pmutCat = c(0.1, 0.2, 0.4, 0.8)
+
+# Results
+
+## Data presentation
+
+# Setting
+
+Figure above describes the evolution of 4 features (RT-PCR, positive RT-PCR, IPTCC and hospitalization) and of the outcome. We observe that the relationship between explanatory features and the outcome evolves over time making this problem complex.
+
+```{r fig.cap="Description of the outcome and 4 chosen features"}
+df_data <- read.csv(here::here("../high_dimension_reservoir/data_obfuscated/20220117.csv"))
+########## NB FEATURES #####
+nb_features <- read.csv(here::here("../high_dimension_reservoir/data_obfuscated/20220117.csv")) %>%
+  select(-outcome, -outcomeDate, -START_DATE) %>%
+  ncol()
+########## Understand gaps #####
+df_data %>%
+  select(P_TOUS_AGES, TESTED_TOUS_AGES, IPTCC.mean, outcome, outcomeDate, hosp) %>%
+  mutate(outcomeDate = as.Date(outcomeDate)) %>%
+  tidyr::pivot_longer(cols = -outcomeDate) %>%
+  mutate(name = factor(name,
+                       levels = c("outcome",
+                                  "hosp",
+                                  "P_TOUS_AGES",
+                                  "TESTED_TOUS_AGES",
+                                  "IPTCC.mean"),
+                       labels = c("Outcome",
+                                  "Hospitalization",
+                                  "Positive RT-PCR",
+                                  "RT-PCR",
+                                  "IPTCC (weather)"))) |> 
+  ggplot(mapping = aes(x = outcomeDate, y = value)) +
+  geom_line() +
+  facet_grid(name ~ ., scales = "free_y") +
+  scale_x_date(date_breaks = "months") +
+  theme_minimal() +
+  theme(axis.text.x = element_text(angle = 90),
+        strip.text.y = element_text(angle = 0)) +
+  labs(x = "Date")
+```
+
+## Forecast
 
 ```{r}
 ### 1) Load data
@@ -50,16 +115,16 @@ df_all <- df_all_temp %>% slice_min(hp_date) %>% mutate(update = "No") %>%
          update = factor(update, levels = c("No", "Yes"), labels = c("No monthly update", "Monthly update")))
 ```
 
-## Performance
-
 ### Sanity check
+
+First, we check that there is 40 reservoir prediction for each day of the prediction for each scenario. We observe that there is indeed a forecast for each day. Some days have less than 40 reservoirs but the minimum is 37 which seems acceptable.
 
 ```{r sanitycheck, fig.height=6, fig.cap="Number of reservoir per day for prediction"}
 df_all |> 
   group_by(update, short_name_model, outcomeDate) |> 
   summarise(n = n(), .groups = "drop") |> 
   ggplot(mapping = aes(x = outcomeDate, y = n, color = update)) +
-  geom_line(linewidth = 1) +
+  geom_point(linewidth = 1) +
   facet_grid(short_name_model ~ update) +
   theme_minimal() +
   theme(strip.text.y = element_text(angle = 0),
@@ -97,11 +162,21 @@ df_perf <- df_all %>%
   select(short_name_model, pmutQuant, pmutCat, lr_sigma, update, AE, sd_AE, AE_baseline, sd_AE_baseline, RE, sd_RE, RE_baseline, sd_RE_baseline)
 
 df_perf %>%
-  # knitr::kable(format = "latex",
-  #              digits = 2)
+  mutate(across(c("AE", "RE", "AE_baseline", "RE_baseline", starts_with("sd_")),
+                ~ round(.x, 2))) |> 
+  mutate(update = update,
+         pmutCat = pmutCat,
+         lr_sigma = lr_sigma,
+         MAE = paste0(AE, "(\\pm", sd_AE, ")"),
+         MRE = paste0(RE, "(\\pm", sd_RE, ")"),
+         MAEB = paste0(AE_baseline, "(\\pm", sd_AE_baseline, ")"),
+         MREB = paste0(RE_baseline, "(\\pm", sd_RE_baseline, ")"),
+         .keep = "none") |> 
+  # knitr::kable(format = "latex", booktabs = TRUE)
   knitr::kable(digits = 2,
                caption = "Model performance") %>%
   kableExtra::kable_styling()
+
 ```
 
 ```{r tileperf}
@@ -120,7 +195,7 @@ df_perf |>
 ```
 
 ```{r lineperf}
-df_perf |> 
+graph_perf <- df_perf |> 
   mutate(pmutCat = as.factor(pmutCat),
          pmutCat = forcats::fct_rev(pmutCat)) |> 
   ggplot(mapping = aes(x = lr_sigma, y = AE, color = pmutCat, group = pmutCat)) +
@@ -133,6 +208,9 @@ df_perf |>
   labs(y = "Mean absolute error",
        x = "Leaking rate sigma",
        color = "P(mutation categorical genes)")
+
+graph_perf
+ggsave(filename = here::here("figures/graph_perf.pdf"), height = 4, width = 6)
 ```
 
 # Hyperparameters
@@ -183,14 +261,15 @@ df_all_hp_best40 <- df_all_hp %>%
 
 ## Numeric hyperparameters
 
-```{r fig.height=8, fig.cap="Sanity check leaking rate, variance of leaking rate of genetic individuals should increase with leaking rate mutation sigma"}
+```{r fig.height=5, fig.cap="Sanity check leaking rate, variance of leaking rate of genetic individuals should increase with leaking rate mutation sigma"}
 plot_sanity_numeric_hp <- df_all_hp |> 
   group_by(pmutCat, lr_sigma, last_used_observation) |> 
-  summarise(var_lr = var(leaking_rate), .groups = "drop") |> 
+  summarise(var_log_lr = var(log10(leaking_rate)), .groups = "drop") |> 
   mutate(pmutCat = as.factor(pmutCat),
          last_used_observation = as.factor(last_used_observation)) |> 
-  ggplot(mapping = aes(x = lr_sigma, y = var_lr, color = last_used_observation, shape = pmutCat)) +
+  ggplot(mapping = aes(x = lr_sigma, y = var_log_lr, color = pmutCat)) +
   geom_point() +
+  facet_wrap(last_used_observation ~ ., scales = "free_y") +
   labs(x = "Leaking rate mutation sigma",
        y = "Variance of leaking rate") +
   scale_x_log10(breaks = unique(df_all_hp$lr_sigma)) +
@@ -199,31 +278,62 @@ plot_sanity_numeric_hp
 ```
 
 
-```{r fig.height=8, fig.cap="Numeric hyperparameter, density of all genetic individuals."}
-plot_numeric_hp <- df_all_hp |> 
-  select(pmutCat, lr_sigma, last_used_observation, all_of(numeric_hp)) |> 
-  tidyr::pivot_longer(cols = numeric_hp, names_to = "hyperparameter") |> 
+
+```{r fig.height=10, fig.width=6, fig.cap="Performance on the train set"}
+plot_best_numeric_hp_values_bylr_sigma <- df_all_hp_best40 |> 
+  group_by(short_name_model, pmutCat, lr_sigma, last_used_observation) |> 
+  summarise(median = round(median(value),2),
+            Q1 = round(quantile(value, .25),2),
+            Q3 = round(quantile(value, .75), 2)) |> 
   mutate(pmutCat = as.factor(pmutCat),
          pmutCat = forcats::fct_rev(pmutCat),
-         last_used_observation = as.factor(last_used_observation),
-         last_used_observation = forcats::fct_rev(last_used_observation)) |> 
-  ggplot(mapping = aes(x = value,
-                       y = last_used_observation,
-                       group = interaction(last_used_observation, hyperparameter),
-                       fill = hyperparameter,
-                       color = hyperparameter)) +
-  ggridges::geom_density_ridges(alpha = 0.5) +
-  facet_grid(pmutCat ~ lr_sigma, scales = "free_y", labeller = label_both, switch = "both") +
-  scale_x_log10() +
-  scale_fill_manual(values = c("#264653", "#2A9D8F", "#F4A261", "#E76F51")) +
-  scale_color_manual(values = c("#264653", "#2A9D8F", "#F4A261", "#E76F51")) +
+         last_used_observation = as.factor(last_used_observation)) |> 
+  ggplot(mapping = aes(x = last_used_observation, y = median, ymin = Q1, ymax = Q3, color = pmutCat, group = pmutCat)) +
+  geom_point() +
+  geom_errorbar(width = 0) +
+  geom_line() +
+  facet_wrap(lr_sigma ~ ., labeller = label_both, scales = "free_y") +
   theme_minimal() +
-  theme(legend.position = "bottom") +
-  labs(x = "Hyperparameter value",
-       y = "Update Date")
+  theme(axis.text.x = element_text(angle = 90),
+        legend.position = "bottom") +
+  guides(color = guide_legend(ncol = 2)) +
+  scale_color_manual(values = c("black", "#03045E", "#0077B6", "#00B4D8")) +
+  labs(y = "Mean absolute error",
+       x = "Date",
+       color = "P(mutation categorical genes)")
 
-plot_numeric_hp
+plot_best_numeric_hp_values_bypmutcat <- df_all_hp_best40 |> 
+  group_by(short_name_model, pmutCat, lr_sigma, last_used_observation) |> 
+  summarise(median = round(median(value),2),
+            Q1 = round(quantile(value, .25),2),
+            Q3 = round(quantile(value, .75), 2)) |> 
+  mutate(lr_sigma = as.factor(lr_sigma),
+         lr_sigma = forcats::fct_rev(lr_sigma),
+         last_used_observation = as.factor(last_used_observation)) |> 
+  ggplot(mapping = aes(x = last_used_observation, y = median, ymin = Q1, ymax = Q3, color = lr_sigma, group = lr_sigma)) +
+  geom_point() +
+  geom_errorbar(width = 0) +
+  geom_line() +
+  facet_wrap(pmutCat ~ ., labeller = label_both, scales = "free_y") +
+  theme_minimal() +
+  theme(axis.text.x = element_text(angle = 90),
+        legend.position = "bottom") +
+  guides(color = guide_legend(ncol = 2)) +
+  scale_color_manual(values = c("black", "#6A040F", "#D00000", "#E85D04")) +
+  labs(y = "Mean absolute error",
+       x = "Date",
+       color = "sigma(leaking rate)")
+
+
+plot_best_numeric_hp_values.pdf <- ggpubr::ggarrange(plot_best_numeric_hp_values_bylr_sigma, plot_best_numeric_hp_values_bypmutcat)
+
+plot_best_numeric_hp_values.pdf
+
+ggsave(plot = plot_best_numeric_hp_values.pdf,
+       filename = here::here("figures/plot_best_numeric_hp_values.pdf"),
+       height = 6, width = 8)
 ```
+
 
 ```{r fig.height=8, fig.cap="Numeric hyperparameter, density of 40 best genetic individuals per hyperparameter update date."}
 plot_best_numeric_hp <- df_all_hp_best40 |> 
@@ -240,7 +350,7 @@ plot_best_numeric_hp <- df_all_hp_best40 |>
                        color = hyperparameter)) +
   ggridges::geom_density_ridges(alpha = 0.5) +
   facet_grid(pmutCat ~ lr_sigma, scales = "free_y", labeller = label_both, switch = "both") +
-  scale_x_log10() +
+  scale_x_log10(breaks = c(1e-10, 1e-5, 1, 1e5)) +
   scale_fill_manual(values = c("#264653", "#2A9D8F", "#F4A261", "#E76F51")) +
   scale_color_manual(values = c("#264653", "#2A9D8F", "#F4A261", "#E76F51")) +
   theme_minimal() +
@@ -249,95 +359,89 @@ plot_best_numeric_hp <- df_all_hp_best40 |>
        y = "Update Date")
 
 plot_best_numeric_hp
+ggsave(plot_best_numeric_hp, file = here::here("figures/plot_best_numeric_hp.pdf"),
+       width = 8,
+       height = 8,
+       useDingbats = TRUE)
 ```
 
 ## Categorical hyperparameters
 
-```{r}
-df_all_hp_best40_qual <- df_all_hp_best40 |> 
-  select(c(genetic_id, short_name_model, job_id, pmutCat, lr_sigma, last_used_observation, ends_with("_bin")))
-```
-
 ```{r fig.height=8, fig.cap="Number of selected features among the best genetic individuals."}
-df_all_hp_best40_qual |> 
+df_all_hp_best40_qual <- df_all_hp |> 
+  select(genetic_id, pmutCat, lr_sigma, last_used_observation, ends_with("_bin"))
+
+temp <- df_all_hp_best40_qual |> 
   tidyr::pivot_longer(cols = ends_with("_bin")) |> 
   group_by(genetic_id, pmutCat, lr_sigma, last_used_observation) |> 
   summarise(n_features = sum(value == "y"), .groups = "drop") |> 
   mutate(last_used_observation = as.factor(last_used_observation),
          pmutCat = as.factor(pmutCat),
          pmutCat = forcats::fct_rev(pmutCat)) |> 
-  ggplot(mapping = aes(color = pmutCat, y = n_features, x = lr_sigma, group = interaction(pmutCat, lr_sigma))) +
-  geom_boxplot() +
-  facet_grid(last_used_observation ~ .) +
+  group_by(pmutCat, lr_sigma, last_used_observation) |> 
+  summarise(median = median(n_features),
+            q1 = quantile(n_features, .25),
+            q3 = quantile(n_features, .75),
+            .groups = "drop")
+
+plot_nb_features <- temp |> 
+  ggplot(mapping = aes(color = pmutCat,
+                       y = median,
+                       ymin = q1,
+                       ymax = q3,
+                       x = last_used_observation,
+                       group = pmutCat)) +
+  geom_errorbar(width = 0, position = position_dodge(width=.5)) +
+  geom_point(position = position_dodge(width=.5)) +
+  geom_line(position = position_dodge(width=.5)) +
+  facet_grid(lr_sigma ~ ., labeller = label_both) +
   scale_color_manual(values = c("black", "#03045E", "#0077B6", "#00B4D8")) +
-  scale_x_log10(breaks = unique(df_all_hp_best40_qual$lr_sigma)) +
+  scale_y_continuous(breaks = seq(0,400, by =20)) +
   theme_minimal() +
-  theme(strip.text.y = element_text(angle = 0)) +
-  labs(x = "Leaking rate sigma mutation",
+  theme(axis.text.x = element_text(angle = 90)) +
+  labs(x = "Date",
        y = "Number of selected features",
        color = "P(mutation categorical genes)")
+
+plot_nb_features
+
+ggsave(plot_nb_features, file = here::here("figures/plot_nb_features.pdf"),
+       height = 6, width = 6)
 ```
-
-
-<!-- ```{r factorialanalysis} -->
-<!-- # Loading data -->
-<!-- library(FactoMineR) -->
-<!-- res.mca <- df_all_hp_best40_qual |>  -->
-<!--   filter(last_used_observation == "2021-03-01") |>  -->
-<!--   select(pmutCat, lr_sigma, ends_with("_bin")) |>  -->
-<!--   mutate(across(.cols = c(pmutCat, lr_sigma), .fns = as.factor)) |>  -->
-<!--   MCA(ncp = 200, -->
-<!--       quali.sup = c("pmutCat", "lr_sigma"), -->
-<!--       graph=FALSE) -->
-<!-- res.hcpc <- HCPC(res.mca, graph = FALSE, nb.clust = -1, max = 100, min = 2) -->
-<!-- res.hcpc$desc.ind -->
-<!-- ``` -->
-
-<!-- ```{r} -->
-<!-- library(umap) -->
-
-<!-- df_freq_selection <- df_all_hp_best40_qual |>  -->
-<!--   tidyr::pivot_longer(cols = ends_with("_bin")) |>  -->
-<!--   group_by(short_name_model,  pmutCat, lr_sigma, last_used_observation, name) |>  -->
-<!--   summarise(value = mean(value == "y"), .groups = "drop") |>  -->
-<!--   tidyr::pivot_wider() -->
-
-<!-- umap_test <- umap(df_freq_selection |>  -->
-<!--   select(ends_with("_bin"))) -->
-
-<!-- umap_test$layout |>  -->
-<!--   as.data.frame() |>  -->
-<!--   bind_cols(df_freq_selection) |>  -->
-<!--   mutate(pmutCat = as.factor(pmutCat), -->
-<!--          lr_sigma = as.factor(lr_sigma)) |>  -->
-<!--   ggplot(mapping = aes(x = V1, y = V2, color = lr_sigma, shape = pmutCat)) + -->
-<!--   geom_point() -->
-<!-- ``` -->
-
 
 ```{r freqselectionfeatures, fig.height=8}
 df_freq_selection <- df_all_hp_best40_qual |>  
   tidyr::pivot_longer(cols = ends_with("_bin")) |>  
-  group_by(short_name_model,  pmutCat, lr_sigma, last_used_observation, name) |>  
+  group_by(pmutCat, lr_sigma, last_used_observation, name) |>  
   summarise(value = mean(value == "y"), .groups = "drop") |> 
   mutate(last_used_observation = as.factor(last_used_observation))
 
-ggplot(df_freq_selection,
+plot_distribution_feature_selection <- ggplot(df_freq_selection,
        mapping = aes(x = value,
                      fill = last_used_observation,
                      color = last_used_observation,
                      y = lr_sigma,
                      group = interaction(lr_sigma, last_used_observation))) +
   ggridges::geom_density_ridges(alpha = 0.2) +
+  geom_vline(xintercept = .5, linetype = 2, color = "darkgrey") +
   facet_grid(. ~ pmutCat, labeller = label_both) +
   scale_fill_viridis_d() +
   scale_color_viridis_d() +
-  scale_y_log10() +
+  scale_y_log10(breaks = unique(df_all_hp_best40_qual$lr_sigma)) +
+  scale_x_continuous(limits = c(0,1),
+                     breaks = c(0, .5, 1)) +
   labs(y = "Leaking rate sigma mutation",
        x = "Frequency of feature selection",
        fill = "Date update",
        color = "Date update") +
-  theme_minimal() +
-  xlim(0,1)
+  theme_minimal()
+
+plot_distribution_feature_selection
+
+ggsave(plot_distribution_feature_selection,
+       file = here::here("figures/plot_distribution_feature_selection.pdf"),
+       height = 6,
+       width = 8)
 ```
+
 
